# CudaImageProcessing

./: .gitignore  BasicFilter.cpp  CMakeLists.txt  FaceDetectionCuda.cpp  FaceDetectionCuda.h  FaceDetectionSimple.cpp  README.md  TestLibrary.cpp  test.cu
DataProcessingLibrary/: MatrixMultiplication.cu  MatrixMultiplication.h  MatrixSearch.cu  MatrixSearch.h
ImageProcessingLibrary/: ObjectDetectCuda.cpp
MainLibrary/: BasicFilterCuda.cpp  BasicFilterCuda.h  ObjectDetectCuda.cpp  ObjectDetectCuda.h
SupportingFiles/: BasicFilter.h  FaceDetectionCuda.cpp  FaceDetectionSimple.cpp  FaceDetectionSimple.h  matmul.cu  test.cu
