cmake_minimum_required(VERSION 3.6)
project(cuda2)
find_package(CUDA REQUIRED)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 11)

#set(SOURCE_FILES SupportingFiles/test.cu SupportingFiles/BasicFilter.cpp SupportingFiles/FaceDetectionCuda.cpp)
cuda_add_executable(cuda2 SupportingFiles/test.cu)
add_executable(cudaocv SupportingFiles/BasicFilter.cpp)
add_executable(cudaFaceDetect SupportingFiles/FaceDetectionCuda.cpp)
add_executable(simpleFaceDetect SupportingFiles/FaceDetectionSimple.cpp)
add_executable(testlibrary TestLibrary.cpp)
add_library(cudaLibrary MainLibrary/ObjectDetectCuda.h MainLibrary/ObjectDetectCuda.cpp)
include_directories( ${OpenCV_INCLUDE_DIRS} )
target_link_libraries( cudaocv ${OpenCV_LIBS} )
target_link_libraries( cudaFaceDetect ${OpenCV_LIBS} )
target_link_libraries( simpleFaceDetect ${OpenCV_LIBS} )
target_link_libraries( cudaLibrary ${OpenCV_LIBS} )
target_link_libraries(testlibrary cudaLibrary)